--- a/pages/algoritmosPages/algoritmosPage/bubblesort.html
+++ b/pages/algoritmosPages/algoritmosPage/bubblesort.html
@@ -29,6 +29,7 @@
     </main>
 
 
-    <script src="../../../scripts/algoritmosOrdenacaoScript.js"></script>
+    <script src="../../../scripts/objetos/AlgoritmosOrdenacaoScript.js" type="module"></script>
+    <script src="../../../scripts/objetos/CreateCaixaCodigo.js" type="module"></script>
 </body>
 </html>
