Agora o front-end recebe os valors do back-end e os exibe, porém ainda falta refinar um pouco.

--- a/pages/algoritmosPages/algoritmosPage/bubblesort.html
+++ b/pages/algoritmosPages/algoritmosPage/bubblesort.html
@@ -32,6 +32,7 @@
     <script src="../../../scripts/compilados/objetosGerais/MostraCodigos.js" type="module"></script>
     <script src="../../../scripts/compilados/objetosGerais/CreateCaixaCodigo.js" type="module"></script>
     <script src="../../../scripts/compilados/objetosGerais/RequisitaAlgoritmos.js" type="module"></script>
+    <script src="../../../scripts/compilados/objetosGerais/ExecutaAlgoritmos.js" type="module"></script>
     <script src="../../../scripts/compilados/algoritmosObjetos/BubbleSort.js" type="module"></script>
     <script src="../../../scripts/compilados/algoritmosObjetos/Algoritmo.js" type="module"></script>
 </body>
