Adicionado flavicon's para cada página, com excessão da págin principal.

--- a/pages/algoritmosPages/algoritmosPage/bubblesort.html
+++ b/pages/algoritmosPages/algoritmosPage/bubblesort.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="../../../styles/styleGeral.css">
     <link rel="stylesheet" href="../../../styles/caixaCodigo.css">
 
+    <link rel="shortcut icon" href="../../../imagens/icones/iconeAlgoritmo.ico" type="image/x-icon">
+
 </head>
 <body>
     
