--- a/pages/analizeAssintoticaPages/index.html
+++ b/pages/analizeAssintoticaPages/index.html
@@ -7,6 +7,8 @@
 
     <link rel="stylesheet" href="../../styles/styleGeral.css">
 
+    <link rel="shortcut icon" href="../../imagens/icones/IconeAnalizeAssintotica.ico" type="image/x-icon">
+
 </head>
 <body>
 
