Agora a parte em que os algoritmos chamam mostrarCodigo é dinamica, de forma que não é necessário que cada algoritmo tenha uma classe para isso

--- a/pages/algoritmosPages/algoritmosPage/bubblesort.html
+++ b/pages/algoritmosPages/algoritmosPage/bubblesort.html
@@ -15,7 +15,7 @@
     
     <header>
 
-        <h1>BubbleSort</h1>
+        <h1 id="nome-algoritmo">BubbleSort</h1>
 
     </header>
 
@@ -35,7 +35,7 @@
     <script src="../../../scripts/compilados/objetosGerais/CreateCaixaCodigo.js" type="module"></script>
     <script src="../../../scripts/compilados/objetosGerais/RequisitaAlgoritmos.js" type="module"></script>
     <script src="../../../scripts/compilados/objetosGerais/ExecutaAlgoritmos.js" type="module"></script>
-    <script src="../../../scripts/compilados/algoritmosObjetos/BubbleSort.js" type="module"></script>
     <script src="../../../scripts/compilados/algoritmosObjetos/Algoritmo.js" type="module"></script>
+
 </body>
 </html>
