Terminado o insetion sort na prática, faltando somente as variações.

--- a/pages/algoritmosPages/index.html
+++ b/pages/algoritmosPages/index.html
@@ -144,6 +144,57 @@
             <p>Não é estável</p>
             <p>Implementação do <a href="algoritmosPage/selectionsort.html">SelectionSort</a>.</p>
         </div>
+
+        <div id="insersionsort-algorimo">
+
+            <h2>InsertionSort</h2>
+
+            <p>
+
+                Tem como rotina base a inserção ordenada, executamos diversas vezes essa rotina, n - 1
+                vezes 
+
+            </p>
+
+            <h3>Inserção ordenada</h3>
+
+            <p>
+
+                Temos um array qualquer, o qual temos que ordenar um elemento que não esta na primeira
+                posição, assim comparamos esse elemento com elementos anteriores dele e se ele for menor,
+                então trocamos ate algum elemento ser menor que ele, ou ele atingir o primeiro indice do array.
+
+            </p>
+
+            <h3>Usando a inserção para criar o insertionSort</h3>
+
+            <p>
+
+                Tendo em mente a inserção ordenada, basta aplicar ela diversas vezes, porém vamos começar
+                comparando da segunda posição, de forma que cada vez vamos usar um indice maior para ser comparando
+                com seu antecesor.
+
+            </p>
+
+            <img src="../../imagens/Insertion-sort-example.gif" alt="gif de como o insertion sort age em um array" class="gif-insertion-sort">
+
+            <cite>
+
+                <p>
+                    Gif retirado da <a href="https://commons.wikimedia.org/wiki/Main_Page" target="_blank">wikimedia</a>
+                    sobre a lincença <a href="https://en.wikipedia.org/wiki/en:Creative_Commons" target="_blank">Creative Commons</a>
+                     <a href="https://creativecommons.org/licenses/by-sa/3.0/deed.en" target="_blank">Attribution-Share Alike 3.0 Unported</a>
+                </p>   
+
+            </cite>
+
+
+            <p>É in-place.</p>
+            <p>A complexidade é O(n<sup>2</sup>)</p>
+            <p>É estável</p>
+
+            <p>Implementação <a href="algoritmosPage/insertionsort.html">InseritionSort</a></p>
+        </div>
         
     </main>
     
